@@ -37,18 +37,15 @@ function modChrome_xhtml($module, &$params, &$attribs)
  */
 function modChrome_sliders($module, &$params, &$attribs)
 {
-	jimport('joomla.html.pane');
 	// Initialize variables
 	$user = &JFactory::getUser();
-	$sliders = &JPane::getInstance('sliders');
 
 	$editAllComponents 	= $user->authorize('core.manage', 'com_installer');
 
 	// special handling for components module
 	if ($module->module != 'mod_components' || ($module->module == 'mod_components' && $editAllComponents)) {
-		$sliders->startPanel(JText::_($module->title), 'module' . $module->id);
+		echo JHtml::_('sliders.panel',JText::_($module->title), 'module' . $module->id);
 		echo $module->content;
-		$sliders->endPanel();
 	}
 }
 
@@ -57,18 +54,15 @@ function modChrome_sliders($module, &$params, &$attribs)
  */
 function modChrome_tabs($module, &$params, &$attribs)
 {
-	jimport('joomla.html.pane');
 	// Initialize variables
 	$user	= &JFactory::getUser();
-	$tabs	= &JPane::getInstance('tabs');
-
+	
 	$editAllComponents 	= $user->authorize('core.manage', 'com_installer');
 
 	// special handling for components module
 	if ($module->module != 'mod_components' || ($module->module == 'mod_components' && $editAllComponents)) {
-			$tabs->startPanel(JText::_($module->title), 'module' . $module->id);
-			echo $module->content;
-			$tabs->endPanel();
+		echo JHtml::_('tabs.panel', JText::_($module->title), 'module' . $module->id);
+		echo $module->content;
 	}
 }
 ?>
