@@ -35,6 +35,8 @@ var JTabs = new Class({
         this.descriptions = this.dlist.getElements(this.options.descriptionSelector);
         this.content = new Element('div').inject(this.dlist, 'after').addClass('current');
 
+	this.options.display = this.options.display.toInt().limit(0, this.titles.length-1);
+
         for (var i = 0, l = this.titles.length; i < l; i++){
             var title = this.titles[i];
             var description = this.descriptions[i];
@@ -43,7 +45,7 @@ var JTabs = new Class({
             description.inject(this.content);
         }
 
-        if ($chk(this.options.display)) this.display(this.options.display);
+        this.display(this.options.display);
 
         if (this.options.initialize) this.options.initialize.call(this);
     },
@@ -57,5 +59,6 @@ var JTabs = new Class({
     display: function(i) {
         this.hideAllBut(i);
         this.fireEvent('onActive', [this.titles[i], this.descriptions[i]]);
+	Cookie.write('jpanetabs_' + this.dlist.id, i);
     }
 });
