@@ -28,11 +28,7 @@ defined('_JEXEC') or die;
  */
 function modChrome_slider($module, &$params, &$attribs)
 {
-	jimport('joomla.html.pane');
-	// Initialize variables
-	$sliders = & JPane::getInstance('sliders');
-	$sliders->startPanel(JText::_($module->title), 'module' . $module->id);
+	echo JHtml::_('sliders.panel', JText::_($module->title), 'module' . $module->id);
 	echo $module->content;
-	$sliders->endPanel();
 }
 ?>
