@@ -27,6 +27,12 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+20-Nov-2009 Louis Landry
+ + Added JHtmlSliders
+ + Added JHtmlTabs
+ ! JPane and child classes has been deprecated in favor of JHtml helpers.
+ ! Big thanks to Christophe Demko for his work on this.
+
 20-Nov-2009 Andrew Eddie
  ^ Change XML version tags to 1.6.0.
  # Fixed bug in Tooltip JS code where title attribute not found causes error.
